--- a/modulo03/desafio cordel moderno/style.css
+++ b/modulo03/desafio cordel moderno/style.css
@@ -1,39 +1,57 @@
 @charset "utf-8";
 
-
-body {
+* {
     margin: 0px;
     padding: 0px;
+}
+html, body {
+    background-color: darkgray;
     min-height: 100vh;
-    background-color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    margin: 0px;
-    padding: 0px;
     background-color: black;
     color: white;
     text-align: center;
-   
-    
 }
 header > h1 {
-    margin: 0px;
-    padding: 0px;
     padding-top: 50px;
     font-variant: small-caps;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10vw;
-    margin-bottom: 20px;
 }
-main > p {
-    width: 300px;
-    font-size: 2em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+header > p {
+    padding-bottom: 50px;
+
+}
+header a, footer a { 
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+header a:hover, footer a:hover {
+    text-decoration: underline;
+}
+section {
+    padding-top: 10%;
+    padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+
+}
+section.normal {
+background-color: white;
+color: black;
+}
+section.imagem {
+background-color: rgb(24, 23, 23);
+color: white;
+
+}
+section.imagem > p {
+    width: 400px;
+    background-color: rgb(0, 0, 0);
     
+    }
+footer {
+    background-color: black;
+    color: white;text-align: center;
+    pad: 10px;
 }
