--- a/modulo03/desafio cordel moderno/style.css
+++ b/modulo03/desafio cordel moderno/style.css
@@ -1,4 +1,14 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 
 * {
     margin: 0px;
@@ -7,6 +17,7 @@
 html, body {
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
 }
 header {
     background-color: black;
@@ -16,6 +27,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -30,10 +43,12 @@ header a:hover, footer a:hover {
     text-decoration: underline;
 }
 section {
+    font-family: var(--fonte3);
     padding-top: 10%;
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 5vw;
 
 }
 section.normal {
@@ -46,7 +61,8 @@ color: white;
 
 }
 section.imagem > p {
-    width: 400px;
+    display: inline-block;    
+    padding: 5px;
     background-color: rgb(0, 0, 0);
     
     }
